# iceduck

./: README.md  main.py  pyproject.toml
iceduck/: __init__.py  iceberg.py
src/iceduck/: __init__.py  iceberg.py
